--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,23 +12,25 @@
         android:id="@+id/acker_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="96dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/imageButton8"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="16dp"
         android:hapticFeedbackEnabled="true"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
         app:layout_constraintTop_toTopOf="@+id/imageButton2"
         app:srcCompat="@drawable/kuh_gras" />
 
@@ -36,11 +38,11 @@
         android:id="@+id/imageButton2"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginTop="8dp"
         android:hapticFeedbackEnabled="true"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="@+id/imageButton3"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/kuh_rauch" />
 
     <ImageButton
@@ -58,11 +60,11 @@
         android:id="@+id/imageButton4"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginTop="48dp"
         android:hapticFeedbackEnabled="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="@+id/imageButton3"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
         app:srcCompat="@drawable/kuh" />
 
     <ImageButton
@@ -80,8 +82,9 @@
         android:id="@+id/imageButton6"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
         android:hapticFeedbackEnabled="true"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageButton8"
         app:layout_constraintStart_toStartOf="@+id/imageButton7"
         app:srcCompat="@android:drawable/arrow_down_float" />
